--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head> 
 
 <body>
-<!--header/navigation section-->
+<!--header/navigation-->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,7 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
 <!--hero section-->
@@ -44,7 +45,7 @@
             <img src="./assets/images/online-reputation-management.jpg" alt=" A laptop with a page titled Reputation and a graph indicating a steady incline." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+            The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
     <!--social media marketing article-->
@@ -52,46 +53,46 @@
             <img src="./assets/images/social-media-marketing.jpg" alt="Individuals collaborating with various media icons." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+            Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
     </section>
     
-<!--benefits section-->
+<!--aside-->
     <section class="benefits">
-    <!--lead generation section-->
+    <!--lead generation article-->
         <article class="benefit-info">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-    <!--brand awareness section-->
+    <!--brand awareness article-->
         <article class="benefit-info">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-    <!--cost management section-->
+    <!--cost management article-->
         <article class="benefit-info">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""/>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
     </section>
 
 <!--footer-->
-    <div class="footer">
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+        &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 
 </body>
 
